--- a/carentalmangement/car-rental-frontend/tsconfig.json
+++ b/carentalmangement/car-rental-frontend/tsconfig.json
@@ -3,10 +3,13 @@
     "target": "ESNext",
     "module": "ESNext",
     "jsx": "react-jsx",
-    "moduleResolution": "node",
     "strict": true,
+    "moduleResolution": "node",
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
   "include": ["src"]
 }
+
+
